{
  "version": 4,
  "terraform_version": "1.2.4",
  "serial": 45,
  "lineage": "cee538db-9933-6787-8d7d-92669be684b7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fe8141a9a0592a29",
            "association_id": "eipassoc-0af9455e7aa8bdbef",
            "domain": "vpc",
            "id": "eipalloc-0fe8141a9a0592a29",
            "network_border_group": "us-west-2",
            "network_interface": "eni-06063fc0400388d42",
            "private_dns": "ip-10-10-0-36.us-west-2.compute.internal",
            "private_ip": "10.10.0.36",
            "public_dns": "ec2-52-10-216-72.us-west-2.compute.amazonaws.com",
            "public_ip": "52.10.216.72",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-098e42ae54c764c35",
            "arn": "arn:aws:ec2:us-west-2:348979506255:instance/i-0078c5a21ec605153",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0078c5a21ec605153",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "keypair-day2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-090d73398079edbb9",
            "private_dns": "ip-10-10-2-92.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.2.92",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ff744551041560c7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02cb0827dd6498acb",
            "tags": {
              "Env": "dev",
              "Name": "Harsha-Private-EC"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "Harsha-Private-EC"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-074c5f7a2e58a4d11"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_ssh",
            "aws_subnet.private-subnet",
            "aws_vpc.testvpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-098e42ae54c764c35",
            "arn": "arn:aws:ec2:us-west-2:348979506255:instance/i-0c100768335d31de9",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c100768335d31de9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "keypair-day2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07a2dc32bd00e8d0c",
            "private_dns": "ip-10-10-0-11.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.0.11",
            "public_ip": "52.33.120.131",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d33ac41a151da979",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-084d950efa8cc8182",
            "tags": {
              "Env": "dev",
              "Name": "Harsha-Public-EC"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "Harsha-Public-EC"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-074c5f7a2e58a4d11"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_ssh",
            "aws_subnet.public-subnet",
            "aws_vpc.testvpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:348979506255:internet-gateway/igw-04fa491694e005636",
            "id": "igw-04fa491694e005636",
            "owner_id": "348979506255",
            "tags": {
              "Name": "Public-igw"
            },
            "tags_all": {
              "Name": "Public-igw"
            },
            "vpc_id": "vpc-0695bfd9fe01ad0ea"
          },
          "dependencies": [
            "aws_vpc.testvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fe8141a9a0592a29",
            "connectivity_type": "public",
            "id": "nat-0fe8d5bf717ad94af",
            "network_interface_id": "eni-06063fc0400388d42",
            "private_ip": "10.10.0.36",
            "public_ip": "52.10.216.72",
            "subnet_id": "subnet-084d950efa8cc8182"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_subnet.public-subnet",
            "aws_vpc.testvpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:348979506255:route-table/rtb-061047115804d4c30",
            "id": "rtb-061047115804d4c30",
            "owner_id": "348979506255",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0fe8d5bf717ad94af",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Harsha-VPC-private-rt"
            },
            "tags_all": {
              "Name": "Harsha-VPC-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0695bfd9fe01ad0ea"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.gw",
            "aws_vpc.testvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:348979506255:route-table/rtb-0621ca557f7ecda93",
            "id": "rtb-0621ca557f7ecda93",
            "owner_id": "348979506255",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04fa491694e005636",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Harsha-VPC-public-rt"
            },
            "tags_all": {
              "Name": "Harsha-VPC-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0695bfd9fe01ad0ea"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.testvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0300ae9b4c500dd8c",
            "route_table_id": "rtb-0621ca557f7ecda93",
            "subnet_id": "subnet-084d950efa8cc8182"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public-subnet",
            "aws_vpc.testvpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03dfd727084791103",
            "route_table_id": "rtb-0621ca557f7ecda93",
            "subnet_id": "subnet-0d1c5206587445cbb"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public-subnet",
            "aws_vpc.testvpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b7be9353f6ea7fbf",
            "route_table_id": "rtb-0621ca557f7ecda93",
            "subnet_id": "subnet-0c21f8648b3ce1275"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public-subnet",
            "aws_vpc.testvpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0686e350ba738f53d",
            "route_table_id": "rtb-0621ca557f7ecda93",
            "subnet_id": "subnet-08a483519e0a4e164"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public-subnet",
            "aws_vpc.testvpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f7a448352f61d6d7",
            "route_table_id": "rtb-061047115804d4c30",
            "subnet_id": "subnet-02cb0827dd6498acb"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.gw",
            "aws_route_table.private_rt",
            "aws_subnet.private-subnet",
            "aws_subnet.public-subnet",
            "aws_vpc.testvpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c2d2449ae2ef9e69",
            "route_table_id": "rtb-061047115804d4c30",
            "subnet_id": "subnet-0a97e95ac63f438ea"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.gw",
            "aws_route_table.private_rt",
            "aws_subnet.private-subnet",
            "aws_subnet.public-subnet",
            "aws_vpc.testvpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06c89dfdca8854816",
            "route_table_id": "rtb-061047115804d4c30",
            "subnet_id": "subnet-0a1810e701c4ee471"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.gw",
            "aws_route_table.private_rt",
            "aws_subnet.private-subnet",
            "aws_subnet.public-subnet",
            "aws_vpc.testvpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ad45b092cbdf71f6",
            "route_table_id": "rtb-061047115804d4c30",
            "subnet_id": "subnet-01b46d58c67484933"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.gw",
            "aws_route_table.private_rt",
            "aws_subnet.private-subnet",
            "aws_subnet.public-subnet",
            "aws_vpc.testvpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:348979506255:security-group/sg-074c5f7a2e58a4d11",
            "description": "Allow ssh inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-074c5f7a2e58a4d11",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "348979506255",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Harsha-VPC-SG"
            },
            "tags_all": {
              "Name": "Harsha-VPC-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0695bfd9fe01ad0ea"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.testvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:348979506255:subnet/subnet-02cb0827dd6498acb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.10.2.0/25",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02cb0827dd6498acb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "348979506255",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PrivateSubnet-1",
              "env": "dev"
            },
            "tags_all": {
              "Name": "PrivateSubnet-1",
              "env": "dev"
            },
            "vpc_id": "vpc-0695bfd9fe01ad0ea"
          },
          "dependencies": [
            "aws_vpc.testvpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:348979506255:subnet/subnet-0a97e95ac63f438ea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.10.2.128/25",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a97e95ac63f438ea",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "348979506255",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PrivateSubnet-2",
              "env": "dev"
            },
            "tags_all": {
              "Name": "PrivateSubnet-2",
              "env": "dev"
            },
            "vpc_id": "vpc-0695bfd9fe01ad0ea"
          },
          "dependencies": [
            "aws_vpc.testvpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:348979506255:subnet/subnet-0a1810e701c4ee471",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.10.3.0/25",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a1810e701c4ee471",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "348979506255",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PrivateSubnet-3",
              "env": "dev"
            },
            "tags_all": {
              "Name": "PrivateSubnet-3",
              "env": "dev"
            },
            "vpc_id": "vpc-0695bfd9fe01ad0ea"
          },
          "dependencies": [
            "aws_vpc.testvpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:348979506255:subnet/subnet-01b46d58c67484933",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2d",
            "availability_zone_id": "usw2-az4",
            "cidr_block": "10.10.3.128/25",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01b46d58c67484933",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "348979506255",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PrivateSubnet-4",
              "env": "dev"
            },
            "tags_all": {
              "Name": "PrivateSubnet-4",
              "env": "dev"
            },
            "vpc_id": "vpc-0695bfd9fe01ad0ea"
          },
          "dependencies": [
            "aws_vpc.testvpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:348979506255:subnet/subnet-084d950efa8cc8182",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.10.0.0/25",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-084d950efa8cc8182",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "348979506255",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PublicSubnet-1",
              "env": "dev"
            },
            "tags_all": {
              "Name": "PublicSubnet-1",
              "env": "dev"
            },
            "vpc_id": "vpc-0695bfd9fe01ad0ea"
          },
          "dependencies": [
            "aws_vpc.testvpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:348979506255:subnet/subnet-0d1c5206587445cbb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.10.0.128/25",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d1c5206587445cbb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "348979506255",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PublicSubnet-2",
              "env": "dev"
            },
            "tags_all": {
              "Name": "PublicSubnet-2",
              "env": "dev"
            },
            "vpc_id": "vpc-0695bfd9fe01ad0ea"
          },
          "dependencies": [
            "aws_vpc.testvpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:348979506255:subnet/subnet-0c21f8648b3ce1275",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.10.1.0/25",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c21f8648b3ce1275",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "348979506255",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PublicSubnet-3",
              "env": "dev"
            },
            "tags_all": {
              "Name": "PublicSubnet-3",
              "env": "dev"
            },
            "vpc_id": "vpc-0695bfd9fe01ad0ea"
          },
          "dependencies": [
            "aws_vpc.testvpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:348979506255:subnet/subnet-08a483519e0a4e164",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2d",
            "availability_zone_id": "usw2-az4",
            "cidr_block": "10.10.1.128/25",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08a483519e0a4e164",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "348979506255",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PublicSubnet-4",
              "env": "dev"
            },
            "tags_all": {
              "Name": "PublicSubnet-4",
              "env": "dev"
            },
            "vpc_id": "vpc-0695bfd9fe01ad0ea"
          },
          "dependencies": [
            "aws_vpc.testvpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "testvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:348979506255:vpc/vpc-0695bfd9fe01ad0ea",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0ccaaad82ab92540a",
            "default_route_table_id": "rtb-076fc983d85736605",
            "default_security_group_id": "sg-0a534d9e3c9963cf4",
            "dhcp_options_id": "dopt-0a36937501cc56401",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0695bfd9fe01ad0ea",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-076fc983d85736605",
            "owner_id": "348979506255",
            "tags": {
              "Name": "Harsha-VPC"
            },
            "tags_all": {
              "Name": "Harsha-VPC"
            }
          }
        }
      ]
    }
  ]
}